# varcreate

./: CMakeLists.txt  README.md  build.sh
libvarcreate/: CMakeLists.txt
libvarcreate/inc/: libvarcreate.h
libvarcreate/inc/varcreate/: libvarcreate.h
libvarcreate/src/: libvarcreate.c
varcreate/: CMakeLists.txt
varcreate/src/: varcreate.c
varcreate/test/: vars.json  vars2.json
